Layout issues mostly fixed.

--- a/src/components/styles/LibraryFilter.scss
+++ b/src/components/styles/LibraryFilter.scss
@@ -143,11 +143,11 @@ $break-uhd: 2560px;
         pointer-events: all;
         width: max-content;
 
-        > h6 {
+        >h6 {
             display: inline-block;
             pointer-events: none;
-
-            ~ .material-icons-extended {
+            
+            ~.material-icons-extended {
                 position: absolute;
                 vertical-align: text-bottom;
             }
@@ -419,6 +419,8 @@ $break-uhd: 2560px;
         display: inline-flex;
         position: relative;
 
+        margin-bottom: 1rem;
+
         box-shadow: 0 0.125rem 0.75rem rgba(0,0,0,0.32), 0 0.0625rem 0.375rem rgba(0,0,0,0.18);
 
         transition: transform 0.2s ease-out;
@@ -444,6 +446,15 @@ $break-uhd: 2560px;
             grid-column: span 2/span 2;
         }
 
+        &:hover {
+            z-index: 98;
+        }
+
+        >.GqLi4d {
+            width: 100%;
+            height: 100%;
+        }
+
         >.Llx2qd {
             ~.more-icon {
                 display: none;
@@ -467,7 +478,7 @@ $break-uhd: 2560px;
             width: 40px;
             height: 40px;
             margin: 0.25rem;
-            z-index: 2;
+            z-index: 99;
             border-radius: 50%;
 
             &:hover {
